--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -1,49 +1,71 @@
-body.tutorial {
-    --color-text: #fff;
-    --color-bg: #171717;
-    --color-link: #ff0000;
-    background-color: smoke;
-}
-
-.page {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.page__inner {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.cursor {
+#cursor {
     position: fixed;
-    left: 0;
-    top: 0;
-    pointer-events: none;
-}
-
-.cursor--small {
-    width: 5px;
-    height: 5px;
-    left: -2.5px;
-    top: -2.5px;
+    top: -7px;
+    left: -7px;
+    width: 14px;
+    height: 14px;
+    background-color: white;
     border-radius: 50%;
-    z-index: 11000;
-    background: black;
+    pointer-events: none;
+    z-index: 999;
 }
 
-.cursor--canvas {
-    width: 100vw;
-    height: 100vh;
-    z-index: 12000;
+#cursor-border {
+    --size: 36px;
+    position: fixed;
+    top: calc(var(--size) / -2);
+    left: calc(var(--size) / -2);
+    width: var(--size);
+    height: var(--size);
+    border-radius: 50%;
+    box-shadow: 0 0 0 1px white;
+    pointer-events: none;
+    transition: top 0.15s ease-out, left 0.15s ease-out, width 0.15s ease-out,
+        height 0.15s ease-out, background-color 0.15s ease-out;
+    z-index: 999;
 }
 
-.page,
-.page a {
-    cursor: none;
+input {
+    font-family: "Century Gothic", sans-serif;
+    font-size: 2rem;
+    padding: 1rem 2rem;
+    background-color: transparent;
+    color: #64ffda;
+    border: 1px solid #64ffda;
+    border-radius: 0;
+    box-shadow: 0 0 10px #64ffda, 0 0 10px #64ffda inset;
+    text-shadow: 0 0 5px #64ffda, 0 0 10px #64ffda;
+    transition: 0.3s ease-out;
+}
+
+input:hover {
+    color: black;
+    background-color: #64ffda;
+    border-color: #64ffda;
+    box-shadow: 0 0 80px #64ffda;
+}
+
+input:active {
+    transform: scale(0.85);
+    box-shadow: 0 0 30px #64ffda;
+}
+
+input:nth-of-type(2) {
+    margin-left: 2rem;
+    color: white;
+    border: 1px solid white;
+    box-shadow: 0 0 10px white, 0 0 10px white inset;
+    text-shadow: 0 0 5px white, 0 0 10px white;
+}
+
+input:nth-of-type(2):hover {
+    color: black;
+    background-color: white;
+    border-color: white;
+    box-shadow: 0 0 80px white;
+}
+
+input:nth-of-type(2):active {
+    transform: scale(0.85);
+    box-shadow: 0 0 30px white;
 }
