--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -6,7 +6,7 @@
     height: 18px;
     background-color: white;
     border-radius: 50%;
-    border: 1px solid #777;
+    border: 1px solid #004d35;
     pointer-events: none;
     z-index: 999;
 }
