--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -8,7 +8,7 @@
     border-radius: 50%;
     border: 1px solid #004d35;
     pointer-events: none;
-    z-index: 999;
+    z-index: 9999;
 }
 
 #cursor-border {
@@ -70,4 +70,8 @@ input:nth-of-type(2):hover {
 input:nth-of-type(2):active {
     transform: scale(0.85);
     box-shadow: 0 0 30px white;
+}
+
+#wpadminbar {
+    z-index: 9998 !important;
 }
