--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -26,7 +26,7 @@
         height 0.15s ease-out, background-color 0.15s ease-out;
     z-index: 9999;
 }
-
+/*
 input {
     font-family: "Century Gothic", sans-serif;
     font-size: 2rem;
@@ -71,7 +71,7 @@ input:nth-of-type(2):active {
     transform: scale(0.85);
     box-shadow: 0 0 30px white;
 }
-
+*/
 #wpadminbar {
     z-index: 9998 !important;
 }
