TS-13 Fixed slider styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -6160,6 +6160,7 @@ header .root {
 }
 
 .services-slider {
+    overflow: auto;
     display: flex;
     -webkit-transform: translateX(0);
     transform: translateX(0)
