TS-7 Added product auto-remover on front

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -1468,6 +1468,7 @@ main {
 }
 
 .animated-link .title span:before {
+    color: #004d35;
     top: 0;
     -webkit-transform: skewY(0);
     transform: skewY(0);
