--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -62,6 +62,7 @@
 
 .material-symbols-outlined,
 #cursor .input-bg,
+#cursor-border.active,
 #cursor-border.input-text,
 #cursor-border.slider-white,
 #cursor-border.slider {
@@ -86,6 +87,12 @@
     margin-left: -3px;
     margin-top: -3px;
 }
+
+#cursor.active {
+    width: 10px;
+    height: 10px;
+}
+
 
 /*
 input {
