--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -35,6 +35,7 @@
     background-color: white;
 }
 
+#cursor.slider-img,
 #cursor.slider-white,
 #cursor.slider {
     height: 60px;
@@ -43,6 +44,14 @@
     left: -30px;
     transition: overflow 0.5s ease;
     padding-left: 5px;
+}
+
+#cursor.slider-img .material-symbols-outlined.arrow_right_long {
+    display: inline-block;
+    margin-top: 7px;
+    margin-left: 2px;
+    font-size: 43px;
+    transform: rotate(-30deg);
 }
 
 #cursor.slider-white .material-symbols-outlined,
@@ -56,14 +65,17 @@
     color: white;
 }
 
+#cursor.slider-img .material-symbols-outlined.arrow_right_long,
 #cursor.slider-white .material-symbols-outlined {
     color: #004d35;
 }
 
+#cursor.slider-white .material-symbols-outlined.arrow_right_long,
 .material-symbols-outlined,
 #cursor .input-bg,
 #cursor-border.active,
 #cursor-border.input-text,
+#cursor-border.slider-img,
 #cursor-border.slider-white,
 #cursor-border.slider {
     display: none;
