--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -6206,7 +6206,12 @@ header .root {
 .services-slider .product-card .product-title {
     left: 420px;
     position: absolute;
-    z-index: 10
+    z-index: 10;
+    vertical-align: middle;
+    height: 100%;
+    padding-top: 230px;
+    padding-left: 150px;
+    width: 100%;
 }
 
 .services-slider .product-desc .animated-link {
