--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9416,6 +9416,7 @@ footer a:hover {
     height: 950px
 }
 
+.wpcf7-response-output,
 .wpcf7 .screen-reader-response,
 form [type="submit"],
 .industries.large .industries-slider .interaction-box {
