TS-7 Added JS validation for checkboxes

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -8957,7 +8957,8 @@ footer a:hover {
     position: absolute;
     right: calc(100% + 10px);
     width: -webkit-max-content;
-    width: max-content
+    width: max-content;
+    margin-top: 12px;
 }
 
 .checkbox {
