TS-31 Added swiper feature to gallery

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10156,6 +10156,10 @@ form [type="submit"],
     }
 }
 
+.wide-gallery-root {
+    overflow-x: hidden;
+}
+
 .wide-gallery-root .gallery-heading {
     margin-left: 85px;
     margin-top: 60px
