TS-7 Fixed post template

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -11173,7 +11173,7 @@ form [type="submit"],
 
 .blog-view .blog-content {
     flex: 1 1;
-    /* max-width: 715px */
+    max-width: 715px
 }
 
 .blog-view .blog-content img {
