TS-7 Added link to blog post image

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -2292,7 +2292,7 @@ a {
 }
 
 .container {
-    white-space: pre-line;
+    /* white-space: pre-line; */
     display: flex;
     flex: 1 1;
     max-width: 1280px;
