TS-14 Fixed "charity" page

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -11918,4 +11918,10 @@ html {
     }
 }
 
+.charity-tabs {
+    svg {
+        display: none;
+    }
+}
+
 /*# sourceMappingURL=main.53d41e13.css.map*/
