TS-32 Added responsive header for homepage

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9495,13 +9495,21 @@ form [type="submit"],
     }
 }
 
+#top_section_mob {
+    margin-top: -1px;
+}
+
 @media screen and (max-width:768px) {
+
+    #top_section,
     #ind_wrap_large {
         display: none;
     }
 }
 
 @media screen and (min-width:769px) {
+
+    #top_section_mob,
     #ind_wrap_mob {
         display: none;
     }
