TS-32 Fixed accordion block for homepage

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9515,8 +9515,9 @@ form [type="submit"],
 
 @media screen and (max-width:1024px) {
 
+    .slider-side-bar,
     #top_section {
-        display: none;
+        display: none !important;
     }
 }
 
