--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -8986,7 +8986,8 @@ footer a:hover {
     margin: 0;
     outline: none;
     padding: 0;
-    position: relative;
+    position: absolute;
+    top:0;
     transition: box-shadow .3s
 }
 
@@ -9011,7 +9012,7 @@ footer a:hover {
 }
 
 .checkbox.path {
-    top: 10px;
+    top: 2px;
     margin-right: 25px;
 }
 
