TS-53 Fixed content issues on Charity page

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -2238,7 +2238,8 @@ a {
 .Body {
     font-size: 16px;
     letter-spacing: .015em;
-    line-height: 22px
+    line-height: 22px;
+    white-space: pre-line;
 }
 
 .Body,
