--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9371,7 +9371,7 @@ footer a:hover {
 
 .industries .industries-slider.still {
     transition: none;
-    overflow: scroll;
+    overflow: hidden;
     padding: 14px 0;
     margin-top: -14px;
 }
