TS-32 Fixed feedbacks block for mobile view

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9511,6 +9511,9 @@ form [type="submit"],
     #planets_body_desktop {
         display: none;
     }
+    .quote-container .single-quote {
+        padding: 0 32px;
+    }
 }
 @media screen and (min-width:481px) {
 
