--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9512,6 +9512,15 @@ form [type="submit"],
     .blog-view .container .blog-content .H3 {
         padding: 0 32px;
     }
+    .blog-view .container .blog-content .H3 {
+        font-size: 30px !important;
+    }
+    .module-container.type-head {
+        margin-top: 0 !important;
+    }
+    .blog-view {
+        padding: 30px 0 60px !important;
+    }
 }
 @media screen and (min-width:481px) {
 
@@ -9528,6 +9537,9 @@ form [type="submit"],
 
     .blog-view .container .blog-content .H4 {
         font-size: 32px;
+    }
+    .blog-view .container .blog-content .module-container.type-paragraph.bg-transparent {
+        margin-bottom: 12px;
     }
     .blog-view .container .blog-content .module-container.type-paragraph {
         margin-bottom: 32px;
