TS-79 Fixed spinner visibility on submitting form

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12093,5 +12093,5 @@ html {
 
 div.wpcf7-validation-errors { display: none !important; }
 span.wpcf7-not-valid-tip { display: none; }
-
+.wpcf7-spinner { display: none !important;}
 /*# sourceMappingURL=main.53d41e13.css.map*/
