--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -4354,7 +4354,8 @@ form [type="file"] {
     align-items: center;
     display: flex;
     justify-content: center;
-    width: 100vw
+    width: 100vw;
+    height: auto;
 }
 
 .quotes .quotes-slider .quote-container .single-quote {
