--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12095,4 +12095,9 @@ html {
 div.wpcf7-validation-errors { display: none !important; }
 span.wpcf7-not-valid-tip { display: none; }
 .wpcf7-spinner { display: none !important;}
-/*# sourceMappingURL=main.53d41e13.css.map*/
+
+
+#pdf-embed-library {
+    text-align: center;
+    margin-bottom: 60px;
+}
