TS-30 Added multiple "render PDF via canvas" functionality

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12101,3 +12101,6 @@ span.wpcf7-not-valid-tip { display: none; }
     text-align: center;
     margin-bottom: 60px;
 }
+#pdfCanvas {
+    display: none;
+}
