--- a/themes/twentytwentyfour/assets/css/fonts.css
+++ b/themes/twentytwentyfour/assets/css/fonts.css
@@ -3,6 +3,7 @@
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 100 700;
+  font-display: fallback;
   src: url(kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsLjBuVY.woff2) format('woff2');
 }
 
