--- a/themes/twentytwentyfour/assets/css/additional.css
+++ b/themes/twentytwentyfour/assets/css/additional.css
@@ -22,13 +22,15 @@
     transform-origin: center;
     width: 0;
     z-index: 10000;
+    top:0;
+    left:0;
 }
 
 #cursor-circle {
     --size: 40px;
     position: fixed;
     width: var(--size);
-    height: var(--size); 
+    height: var(--size);
     border-radius: 50%;
     border: 1px solid #777;
     /* box-shadow: 0 0 0 1px white; */
