--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -4031,7 +4031,7 @@ a {
 }
 
 form [type="file"] {
-    opacity: 0;
+    display: none;
 }
 
 @media screen and (max-width:1200px)and (min-width:481px) {
