--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -3963,7 +3963,7 @@ a {
     grid-gap: 20px;
     display: grid;
     gap: 20px;
-    grid-template-areas: "fn ln" "pn ea" "mc mc" "cv cv" "cb cb" "sn sn";
+    grid-template-areas: "fn ln" "pn ea" "mc mc" "cv cv" "cb cb" "sn sn" "sb sb";
     grid-template-columns: 1fr 1fr;
     margin: 0 auto;
     max-width: 820px
@@ -4003,6 +4003,10 @@ a {
 
 .contact-form-root>div:nth-child(8) {
     grid-area: sn
+}
+
+.contact-form-root>div:nth-child(9) {
+    grid-area: sb
 }
 
 .contact-form-root.subscribe>div:nth-child(5){
